# investments-assistant

./: .env.example  CODEOWNERS  CODE_OF_CONDUCT  CONTRIBUTING  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: build-and-push.yml  deploy.yml  e2e-tests.yml  integration-tests.yml  unit-tests.yml
config/mcp/: setup.md
config/nginx/: investment-assistant.conf  rate-limit.conf
config/pihole/: setup.md
config/wireguard/: client.conf.template  setup.md  wg0.conf.template
scripts/: download_model.py  mcp_server.py  setup.sh
src/: __init__.py  app.py  config.py
src/agent/: __init__.py  investment_agent.py  orchestrator.py  prompts.py  state.py
src/agent/clients/: __init__.py  base.py  llama_cpp_client.py  llm_client.py  transformers_client.py
src/agent/graph/: graph.py
src/agent/utils/: logger.py
src/db/: __init__.py  database.py  models.py
src/news/: __init__.py  email_reader.py  ingestion.py  search.py  sources.py
src/scheduler/: jobs.py  reporter.py
src/scripts/: run_streamlit.sh
src/tools/: __init__.py  alpaca.py  binance_tool.py  coinbase.py  definitions.py  dispatcher.py  ibkr.py  investment_tools.py  market_data.py  news.py  news_memory.py  portfolio.py  simulator.py
src/tools/brokers/: ibkr.py
src/web/: routes.py
src/web/static/: app.js  index.html  style.css
tests/: conftest.py  smoke_test.py  test_tools.py
tests/integration/: conftest.py  db_models_test.py  news_pipeline_test.py
tests/unit/: config_test.py  dispatcher_test.py  email_reader_test.py  market_data_test.py  news_ingestion_test.py  news_memory_test.py  news_search_test.py  news_sources_test.py  portfolio_test.py  simulator_test.py  web_routes_test.py
wiki/: Agent-and-Tool-Use.md  Architecture.md  Broker-Integrations.md  CI-CD.md  Configuration-Reference.md  Database-Schema.md  Development-Guide.md  Home.md  LLM-Backends.md  MCP-Integration.md  News-Pipeline.md  Scheduler-and-Jobs.md  Security-Model.md  Tools-Reference.md
