[project]
name = "investment-assistant"
version = "0.0.1"
description = "AI-powered investment analysis assistant with Streamlit, LangChain, and LangGraph"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
authors = [{"name" = "Luís Pires", "email" = "27.investments.assistant@gmail.com"}]
maintainers = [{"name" = "Luís Pires", "email" = "27.investments.assistant@gmail.com"}]
keywords = ["ai", "investment", "langchain", "langgraph", "streamlit"]

[tool.poetry]
package-mode = false
repository = "https://github.com/Investments-Assistant/"


[tool.poetry.dependencies]
streamlit = "*"
langchain = "*"
langchain-community = "*"
langgraph = "*"
python-dotenv = "*"
requests = "*"
pydantic = "*"
openai = "*"

[tool.poetry.group.dev.dependencies]
ipykernel = "*"
ruff = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
