[project]
name = "investment-assistant"
version = "0.0.1"
description = "AI-powered investment analysis assistant with Streamlit, LangChain, and LangGraph"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12,<3.15,!=3.14.1"
authors = [{"name" = "Luís Pires", "email" = "27.investments.assistant@gmail.com"}]
maintainers = [{"name" = "Luís Pires", "email" = "27.investments.assistant@gmail.com"}]
keywords = ["ai", "investment", "langchain", "langgraph", "streamlit"]

[tool.poetry]
package-mode = false
repository = "https://github.com/Investments-Assistant/"


[tool.poetry.dependencies]
streamlit = "1.56.0"
# langchain = "1.2.15"
# langchain-community = "0.4.1"
langgraph = "1.1.6"
python-dotenv = "1.2.2"
# requests = "*"
# pydantic = "*"
torch = "2.11.0"
transformers = "5.5.3"
torchvision = "0.26.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "7.2.0"
ruff = "0.15.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.ruff]
fix = true

[tool.ruff.format]
# Enable reformatting of code snippets in docstrings.
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (PEP8 formatting)
    "F",  # pyflakes
    "I",  # import sorting
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
